tests/NormalTests/paczka1/small_fuzzy/98142638.err
Error in line 1: CIVzz S473 65,1
Error in line 4: dmC0iQ6iP S473 97,5
Error in line 12: CIVzz S975 -1,4
Error in line 8: By9Z05JSCFY S975 65,5
Error in line 15: A323 S473 61,5
